--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:support-v4:22.0.0'
     compile 'com.android.support:design:22.2.0'
+    compile 'com.makeramen:roundedimageview:2.2.1'
 
 
 }
