修复了一下 包名不统一

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.GuideAcitivty"
+            android:name=".Activity.GuideAcitivty"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
         </activity>
         <activity
-            android:name=".activity.WelcomeActivity"
+            android:name=".Activity.WelcomeActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".Activity.MainActivity">
 
         </activity>
     </application>
