--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     compile 'com.android.support:support-v4:22.0.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.makeramen:roundedimageview:2.2.1'
-
-
+    compile 'com.android.support:cardview-v7:22.0.0'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
+    compile 'com.jiechic.library:xUtils:2.6.14'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
