--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'com.jiechic.library:xUtils:2.6.14'
     compile 'com.google.code.gson:gson:2.2.4'
-
+    compile files('src/main/libs/universal-image-loader-1.8.6-with-sources.jar')
 }
