--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         </activity>
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.NewsItemActivity" />
+        <activity android:name=".activity.NewsItemActivity2" />
         <activity android:name=".activity.SettingActivity"></activity>
+        <activity android:name=".activity.AboutActivity" />
     </application>
 
 </manifest>
